--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 .main-layout{
-  border: 1px solid red;
+  /* border: 1px solid red; */
   min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -127,6 +127,114 @@ footer div ul li #pinterest {
 }
 footer div ul li #pinterest:hover {
 	background-position: -44px -132px;
+}
+
+main {
+  margin: 0;
+  padding: 0 0 30px;
+  text-align: center;
+}
+
+main #featured {
+  margin: 0 0 13px;
+  padding: 0;
+  position: relative;
+  width: 100%;
+}
+
+main #featured img {
+  border: 0;
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+main #featured div {
+  left: 50%;
+  margin-left: -480px;
+  margin-top: -171px;
+  padding: 0 0 0 470px;
+  position: absolute;
+  top: 50%;
+  text-align: left;
+  width: 490px;
+}
+
+main #featured div h2 {
+  background: #fff;
+  color: #000;
+  display: inline-block;
+  font-family: poller_oneregular;
+  font-size: 20px;
+  font-weight: 700;
+  margin: 0 0 18px;
+  padding: 23px 27px 20px;
+  text-transform: uppercase;
+}
+
+main #featured div span {
+  background: #252525;
+  color: #fff;
+  display: inline-block;
+  font-size: 20px;
+  margin: 7px 0;
+  padding: 12px 27px;
+}
+
+main #featured div a {
+  background: #0ba39c;
+  color: #fff;
+  display: inline-block;
+  font-size: 16px;
+  margin: 15px 0 0;
+  padding: 26px 27px 22px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+main > ul {
+  margin: 0 auto;
+  overflow: hidden;
+  padding: 24px 0 0;
+  width: 960px;
+}
+
+main > ul li {
+  display: block;
+  float: left;
+  margin: 0 10px 20px;
+  padding: 0;
+  width: 300px;
+}
+
+main> ul li a {
+  color: #000;
+  display: block;
+  font-family: poller_oneregular;
+  font-size: 20px;
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+main > ul li a img {
+  border: 2px solid #1a1a1a;
+  display: block;
+  margin: 0;
+  padding: 0;
+  opacity: .8;
+  transition: 0.5s ease-in-out;
+}
+
+main > ul li a span {
+  display: block;
+  margin: 0;
+  padding: 33px 0 0;
 }
 
 /* @media (max-width: 580px){
