--- a/styles/styles.css
+++ b/styles/styles.css
@@ -237,20 +237,211 @@ main > ul li a span {
   padding: 33px 0 0;
 }
 
-/* @media (max-width: 580px){
-header {
-  padding: 20px 0;
-	position: relative;
-	width: 100%;
-}
 
-#mobile-navigation {
-	background: url(../images/mobile-menu.png) no-repeat 0 0;
-	display: block;
-	height: 50px;
-	margin: 30px auto 0;
-	padding: 0;
-	width: 50px;
-}
+/* mobile view */
+@media only screen and (max-width: 598px) {
+  body {
+    min-width: 0;
+  }
 
-} */
+  .main-layout {
+    padding: 20px 0;
+    position: relative;
+    width: 100%;
+  }
+
+  a.logo {
+    width: 80%;
+  }
+
+  a.logo img {
+    width: 100%;
+  }
+
+  .nav {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+  }
+
+  .nav li {
+    font-size: 42px;
+  }
+
+  footer {
+    padding: 10px 0 25px;
+  }
+
+  footer div {
+    overflow: visible;
+    width: 100%;
+  }
+
+  footer div p {
+    float: none;
+    margin: 0;
+    text-align: center;
+  }
+
+  footer div ul {
+    float: none;
+    margin: 0 auto;
+    width: 256px;
+  }
+
+  /* main {
+    width: 100%;
+  }
+
+  main h1 {
+    display: block;
+    font-size: 20px;
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  main h1 span {
+    display: block;
+    padding: 3%;
+    width: 94%;
+  }
+  
+  main #featured img {
+    min-width: 960px;
+  }
+  main #featured img {
+    border: 0;
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    min-width: 960px;
+  }
+
+  #featured img {
+    border: 0;
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    min-width: 960px;
+  } */
+
+  /* main #featured {
+    overflow: hidden;
+    margin: 0 0 20px;
+  }
+   */
+  main #featured {
+    margin: 0 0 13px;
+    padding: 0;
+    position: relative;
+    width: 100%;
+  }
+
+  main #featured img {
+    border: 0;
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    min-width: 960px;
+  }
+
+  main #featured div {
+    left: 0;
+    margin: 0;
+    padding: 0 2%;
+    position: absolute;
+    top: 0;
+    text-align: left;
+    width: 96%;
+  }
+
+  main #featured div h2 {
+    font-size: 14px;
+    font-weight: normal;
+    margin: 50px 0 10px;
+    padding: 8px 5px;
+  }
+
+  main #featured div span {
+    display: block;
+    font-size: 14px;
+    margin: 10px 0;
+    padding: 10px;
+  }
+
+  main #featured div a {
+  font-size: 14px;
+  margin: 5px 0 0;
+  padding: 10px;
+  }
+
+  main > ul {
+    overflow: visible;
+    padding: 0 5%;
+    width: 90%;
+  }
+  main ul.gallery {
+    padding: 5% 0;
+    overflow: hidden;
+    width: 100%;
+  }
+  main > ul li {
+    float: none;
+    margin: 0;
+    width: 100%;
+  }
+  main ul.gallery li {
+    float: left;
+    margin: 0 0 5% 5%;
+    width: 42%;
+  }
+  main > ul li a img {
+    width: 98%;
+  }
+  main > ul li a span {
+    padding: 15px 0;
+  }
+  main div ul {
+    margin: 0;
+    padding: 20px 0 0;
+    width: 100%;
+  }
+  main div ul li {
+    overflow: visible;
+    padding: 0 0 20px;
+    width: 99%;
+  }
+  main div ul li .figure {
+    border: 0;
+    display: block;
+    float: none;
+    margin: 0 0 20px;
+    width: 100%;
+  }
+  main div ul li .figure img {
+    width: 100%;
+  }
+  main div ul li div {
+    float: none;
+    padding: 0;
+    width: 100%;
+  }
+  main div ul li div a.more:hover {
+    height: 14px;
+    line-height: 14px;
+  }
+  main form {
+    width: 100%;
+  }
+  main form input, main form textarea {
+    margin: 0 0 20px;
+    padding: 10px;
+    width: 84%;
+  }
+  main form #send {
+    padding: 10px;
+  }
+}
