--- a/styles/about.css
+++ b/styles/about.css
@@ -200,3 +200,101 @@ p {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
 }
+
+/* mobile view */
+@media only screen and (max-width: 598px) {
+  body {
+    min-width: 0;
+  }
+
+  .main-layout {
+    padding: 20px 0;
+    position: relative;
+    width: 100%;
+  }
+
+  a.logo {
+    width: 80%;
+  }
+
+  a.logo img {
+    width: 100%;
+  }
+
+  .nav {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+  }
+
+  .nav li {
+    font-size: 200%;
+  }
+
+  footer {
+    padding: 10px 0 25px;
+  }
+
+  footer div {
+    overflow: visible;
+    width: 100%;
+  }
+
+  footer div p {
+    float: none;
+    margin: 0;
+    text-align: center;
+  }
+
+  footer div ul {
+    float: none;
+    margin: 0 auto;
+    width: 256px;
+  }
+
+  main {   
+    width: 100%;
+    margin: 0;
+    padding: 0 0 30px;
+    text-align: center;
+  }
+
+  main h1 {
+    display: block;
+    font-size: 20px;
+    margin: 0 auto;
+    width: 90%;
+}
+
+  main h1 span {
+    display: block;
+    padding: 3%;
+    width: 94%;
+  }
+
+  main img {
+    /* margin: 24px 0 30px; */
+    border: 2px solid #292929;
+    padding: 0;
+    margin: 24px 0 30px;
+    width: 98%;
+  }
+
+  .article {
+    padding: 0;
+    width: 100%;
+  }
+
+  .article h3 {
+    color: #252525;
+    line-height: 24px;
+    margin: 0;
+    padding: 0;
+  }
+
+  main > div .article p {
+    margin: 0 0 30px;
+  }
+
+
+}
