--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -189,3 +189,81 @@ h1 span {
   opacity: .8;
   transition: 0.5s ease-in-out;
 }
+
+/* mobile view */
+@media only screen and (max-width: 598px) {
+  body {
+    min-width: 0;
+  }
+
+  .main-layout {
+    padding: 20px 0;
+    position: relative;
+    width: 100%;
+  }
+
+  a.logo {
+    width: 80%;
+  }
+
+  a.logo img {
+    width: 100%;
+  }
+
+  .nav {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+  }
+
+  .nav li {
+    font-size: 200%;
+  }
+
+  footer {
+    padding: 10px 0 25px;
+  }
+
+  footer div {
+    overflow: visible;
+    width: 100%;
+  }
+
+  footer div p {
+    float: none;
+    margin: 0;
+    text-align: center;
+  }
+
+  footer div ul {
+    float: none;
+    margin: 0 auto;
+    width: 256px;
+  }
+
+  main {   
+    width: 100%;
+    margin: 0;
+    padding: 0 0 30px;
+    text-align: center;
+  }
+
+  body h1 {
+    display: block;
+    font-size: 20px;
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  main ul.gallery {
+    padding: 5% 5%;
+    overflow: hidden;
+    width: 100%;
+  }
+
+  main ul.gallery li {
+    /* float: left; */
+    margin: 0 0 5% 5%;
+    width: 42%;
+  }
+} 
