--- a/styles/blog.css
+++ b/styles/blog.css
@@ -239,3 +239,114 @@ a.more {
   text-transform: uppercase;
 }
 
+/* mobile view */
+@media only screen and (max-width: 598px) {
+  body {
+    min-width: 0;
+  }
+
+  .main-layout {
+    padding: 20px 0;
+    position: relative;
+    width: 100%;
+  }
+
+  a.logo {
+    width: 80%;
+  }
+
+  a.logo img {
+    width: 100%;
+  }
+
+  .nav {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+  }
+
+  .nav li {
+    font-size: 200%;
+  }
+
+  footer {
+    padding: 10px 0 25px;
+  }
+
+  footer div {
+    overflow: visible;
+    width: 100%;
+  }
+
+  footer div p {
+    float: none;
+    margin: 0;
+    text-align: center;
+  }
+
+  footer div ul {
+    float: none;
+    margin: 0 auto;
+    width: 256px;
+  }
+
+  main {   
+    width: 100%;
+    margin: 0;
+    padding: 0 0 30px;
+    text-align: center;
+  }
+
+  main h1 {
+    display: block;
+    font-size: 20px;
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  main h1 span {
+    display: block;
+    padding: 3%;
+    width: 94%;
+  }
+
+  main > div {
+    padding: 0 5%;
+    width: 90%;
+  }
+
+  main div ul {
+    margin: 0;
+    padding: 20px 0 0;
+    width: 100%;
+}
+
+  main div ul li {
+  overflow: visible;
+  padding: 0 0 20px;
+  width: 99%;
+}
+
+main div ul li .figure {
+  border: 0;
+  display: block;
+  float: none;
+  margin: 0 0 20px;
+  width: 100%;
+}
+
+main div ul li .figure img {
+  width: 100%;
+}
+
+main div ul li div {
+  float: none;
+  padding: 0;
+  width: 100%;
+}
+
+main div ul li div p {
+  padding: 30px 30px 18px;
+}
+
+}
