--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,8 @@ body {
   font-weight: normal;
   line-height: 1;
   margin: 0;
-  min-width: 960px;
+  /* min-width: 960px; */
+  /* i think it's better to not set a min width on body. let it be 100% (default) and change the width of the elements in body */
   padding: 0;
 }
 
@@ -241,7 +242,7 @@ main > ul li a span {
 /* mobile view */
 @media only screen and (max-width: 598px) {
   body {
-    min-width: 0;
+    min-width: 100%;
   }
 
   .main-layout {
@@ -249,9 +250,17 @@ main > ul li a span {
     position: relative;
     width: 100%;
   }
+  header  {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* this isn't a perfect solution. but it works! */
+  }
 
   a.logo {
-    width: 80%;
+    width: 200px;
+    display: block;
   }
 
   a.logo img {
@@ -262,6 +271,7 @@ main > ul li a span {
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
+    width: fit-content;
   }
 
   .nav li {
@@ -333,10 +343,11 @@ main > ul li a span {
   }
    */
   main #featured {
-    margin: 0 0 13px;
+    margin: 0 0 100px;
     padding: 0;
     position: relative;
     width: 100%;
+    
   }
 
   main #featured img {
@@ -345,7 +356,9 @@ main > ul li a span {
     margin: 0;
     padding: 0;
     width: 100%;
-    min-width: 960px;
+    /* min-width: 960px; */
+    height: 400px;
+    object-fit: cover;
   }
 
   main #featured div {
@@ -355,7 +368,7 @@ main > ul li a span {
     position: absolute;
     top: 0;
     text-align: left;
-    width: 96%;
+    width: fit-content;
   }
 
   main #featured div h2 {
